[package]
name = "medieval_platformer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Window",
    "KeyboardEvent",
    "EventTarget",
    "Performance",
    "console"
]}
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
